menyelesakan fitur crud untuk manajemen pengguna. closes #33
