# docs/swagger.json
@@ -36,7 +36,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.LoginRequest"
+                            "$ref": "#/definitions/request.Login"
                         }
                     }
                 ],
@@ -148,7 +148,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/response.OutPatientResponse"
+                                                "$ref": "#/definitions/response.OutPatient"
                                             }
                                         }
                                     }
@@ -261,7 +261,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/response.OutPatientResponse"
+                                                "$ref": "#/definitions/response.OutPatient"
                                             }
                                         }
                                     }
@@ -309,7 +309,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.AssignNurseRequest"
+                            "$ref": "#/definitions/request.AssignNurse"
                         }
                     }
                 ],
@@ -356,11 +356,18 @@
                 "parameters": [
                     {
                         "description": "Process Medic Record by Doctor",
-                        "name": "body",
+                        "name": "body_doctor",
                         "in": "body",
-                        "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.DoctorMedicRequest"
+                            "$ref": "#/definitions/request.DoctorMedicRecord"
+                        }
+                    },
+                    {
+                        "description": "Process Medic Record by Nurse",
+                        "name": "body_nurse",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/request.NurseMedicRecord"
                         }
                     }
                 ],
@@ -416,7 +423,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/response.OutPatientReportLogResponse"
+                                            "$ref": "#/definitions/response.OutPatientReportLog"
                                         }
                                     }
                                 }
@@ -468,7 +475,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/response.OutPatientReportLogResponse"
+                                            "$ref": "#/definitions/response.OutPatientReportLog"
                                         }
                                     }
                                 }
@@ -810,6 +817,278 @@
                     }
                 }
             }
+        },
+        "/user": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKey": []
+                    }
+                ],
+                "description": "Fetch All User Data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "GetAllUser",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.MessageData"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/response.User"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "417": {
+                        "description": "Expectation Failed",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "ApiKey": []
+                    }
+                ],
+                "description": "Create New User Data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "CreateUser",
+                "parameters": [
+                    {
+                        "description": "user data",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.UserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageOnly"
+                        }
+                    },
+                    "417": {
+                        "description": "Expectation Failed",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/:id": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKey": []
+                    }
+                ],
+                "description": "Fetch User Data By ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "GetUserByID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "user id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.MessageData"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.User"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "417": {
+                        "description": "Expectation Failed",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/:id/delete": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKey": []
+                    }
+                ],
+                "description": "Delete User Data By ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "UpdateUser",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "user id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageOnly"
+                        }
+                    },
+                    "417": {
+                        "description": "Expectation Failed",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/:id/update": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKey": []
+                    }
+                ],
+                "description": "Update User Data By ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "UpdateUser",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "user id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "user data",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.UserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageOnly"
+                        }
+                    },
+                    "417": {
+                        "description": "Expectation Failed",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -853,7 +1132,7 @@
                 }
             }
         },
-        "request.AssignNurseRequest": {
+        "request.AssignNurse": {
             "type": "object",
             "properties": {
                 "nurse_id": {
@@ -862,7 +1141,7 @@
                 }
             }
         },
-        "request.DoctorMedicRequest": {
+        "request.DoctorMedicRecord": {
             "type": "object",
             "properties": {
                 "diagnose": {
@@ -875,7 +1154,7 @@
                 }
             }
         },
-        "request.LoginRequest": {
+        "request.Login": {
             "type": "object",
             "properties": {
                 "email": {
@@ -885,6 +1164,27 @@
                 "password": {
                     "type": "string",
                     "example": "password"
+                }
+            }
+        },
+        "request.NurseMedicRecord": {
+            "type": "object",
+            "properties": {
+                "blood_tension": {
+                    "type": "integer",
+                    "example": 122
+                },
+                "body_temp": {
+                    "type": "integer",
+                    "example": 31
+                },
+                "height": {
+                    "type": "integer",
+                    "example": 55
+                },
+                "weight": {
+                    "type": "integer",
+                    "example": 165
                 }
             }
         },
@@ -921,6 +1221,35 @@
                 }
             }
         },
+        "request.UserRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "milimnava@holyhos.co.id"
+                },
+                "facility_id": {
+                    "type": "integer",
+                    "example": 3
+                },
+                "full_name": {
+                    "type": "string",
+                    "example": "Milim Nava"
+                },
+                "gender": {
+                    "type": "string",
+                    "example": "Female"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "password"
+                },
+                "role_id": {
+                    "type": "integer",
+                    "example": 2
+                }
+            }
+        },
         "response.Error": {
             "type": "object",
             "properties": {
@@ -933,14 +1262,6 @@
         "response.MedicRecord": {
             "type": "object",
             "properties": {
-                "blood_tension": {
-                    "type": "integer",
-                    "example": 124
-                },
-                "body_temp": {
-                    "type": "integer",
-                    "example": 34
-                },
                 "complaint": {
                     "type": "string",
                     "example": "Sakit Perut"
@@ -961,10 +1282,6 @@
                     "type": "string",
                     "example": "General"
                 },
-                "height": {
-                    "type": "integer",
-                    "example": 55
-                },
                 "prescription": {
                     "type": "string",
                     "example": "Entrostop"
@@ -972,10 +1289,6 @@
                 "serial_number": {
                     "type": "string",
                     "example": "RM/748/2022/0001"
-                },
-                "weight": {
-                    "type": "integer",
-                    "example": 150
                 }
             }
         },
@@ -996,15 +1309,7 @@
                 }
             }
         },
-        "response.OutPatientReportLogResponse": {
-            "type": "object",
-            "properties": {
-                "serial_number": {
-                    "type": "string"
-                }
-            }
-        },
-        "response.OutPatientResponse": {
+        "response.OutPatient": {
             "type": "object",
             "properties": {
                 "code": {
@@ -1032,6 +1337,14 @@
                     "type": "string"
                 },
                 "session": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.OutPatientReportLog": {
+            "type": "object",
+            "properties": {
+                "serial_number": {
                     "type": "string"
                 }
             }
